# fanstatsy-foosball

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml
.github/workflows/: ci.yml
docs/templates/: ERD.md  PRD.md  TDD.md
hacky-hours/01-ideate/: IDEATION.md  PRODUCT_OVERVIEW.md
hacky-hours/02-design/: ARCHITECTURE.md  BEST_PRACTICES.md  BUSINESS_LOGIC.md  DATA_MODEL.md  LICENSING.md  README.md  SECURITY_PRIVACY.md
hacky-hours/03-roadmap/: ROADMAP.md
hacky-hours/04-build/: BACKLOG.md  CHANGELOG.md
src/fanstatsy/: __init__.py  exceptions.py  scoring.py
tests/unit/: test_exceptions.py  test_scoring.py
