[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fanstatsy"
version = "0.1.0"
description = "Data-driven fantasy football ML system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chris Ling"},
]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "torch>=2.3",
    "plotly>=5.22",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.0",
]
ingestion = [
    "nfl-data-py>=0.3",
    "espn-api>=0.35",
    "sportsipy>=0.1",
]
aws = [
    "boto3>=1.34",
    "aws-cdk-lib>=2.140",
]
all = [
    "fanstatsy[dev,ml,ingestion,aws]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/fanstatsy --cov-report=term-missing --cov-fail-under=100 -v"

[tool.coverage.run]
source = ["src/fanstatsy"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "nfl_data_py.*",
    "espn_api.*",
    "sportsipy.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["fanstatsy"]

[tool.black]
target-version = ["py311"]
line-length = 88
